==2014-09-20== * Now, BaseCube-Derived returns all measures, but not if asked for data. * Now, if we run BaseCube directly after Drill-Across, we would also run OLAP2SPARQL. * Also, we make sure we also call projection.